groups: fixed scrollbar issue in firefox for group splash page

--- a/client/stylus/app.markdown.styl
+++ b/client/stylus/app.markdown.styl
@@ -87,7 +87,7 @@
       padding 1px 4px
       border 1px solid rgba(255,255,255,0.16)
       rounded 2px
-      white-space pre
+      white-space pre-line
       // vendor transition, background-color 0.2s linear
       // &:hover
       //   bg color, lighten(#403C36,2%)
